# CliGJ

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
app/: Cargo.toml  build.rs
app/src/: main.rs
app/src/gui/: at_picker.rs  composer_sync.rs  font_assets.rs  fonts.rs  gui_state.rs  i18n.rs  interactive_commands.rs  ipc.rs  mod.rs  open_in_vscode.rs  prompt_attachments.rs  reveal_in_explorer.rs  shell_profiles.rs  state.rs  terminal_menu.rs  ui_sync.rs  windows_tray.rs  zoom.rs
app/src/gui/run/: callbacks.rs  helpers.rs  mod.rs  timers.rs  timers_ipc.rs  timers_terminal.rs  timers_terminal_interactive.rs  timers_terminal_shell.rs  timers_tests.rs
app/src/gui/run/callbacks/prompt_callbacks/: mod.rs  prompt_input_callbacks.rs  shell_manage_callbacks.rs
app/src/gui/run/callbacks/prompt_callbacks/interactive_manage_callbacks/: editor_callbacks.rs  mod.rs  save_callbacks.rs
app/src/gui/run/callbacks/terminal_callbacks/: chips_selection_callbacks.rs  history_callbacks.rs  menu_callbacks.rs  mod.rs  tab_actions_callbacks.rs  viewport_callbacks.rs
crates/cligj-core/: Cargo.toml
crates/cligj-core/src/: cli.rs  config.rs
crates/cligj-terminal/: Cargo.toml
crates/cligj-terminal/src/: ansi.rs  key_encoding.rs  lib.rs  mod.rs  prompt_key.rs  render.rs  replay.rs  session.rs  types.rs  windows_conpty.rs
crates/cligj-workspace/: Cargo.toml
crates/cligj-workspace/src/: lib.rs  workspace_files.rs
docs/: bugs.md  command-condition.md  implementation_plan.md  interactive-ai-terminal-plan.md  refactor-terminal.md  structure.md
scripts/: release.bat  release.ps1
src/: gui.rs  main.rs  workspace_files.rs
src/core/: cli.rs  config.rs  error.rs  runner.rs
src/gui/: at_picker.rs  composer_sync.rs  fonts.rs  gui_state.rs  i18n.rs  interactive_commands.rs  ipc.rs  mod.rs  open_in_vscode.rs  prompt_attachments.rs  reveal_in_explorer.rs  run.rs  shell_profiles.rs  state.rs  ui_sync.rs  windows_tray.rs
src/gui/run/: callbacks.rs  helpers.rs  mod.rs  timers.rs
src/gui/run/callbacks/: prompt_callbacks.rs  terminal_callbacks.rs
src/gui/run/callbacks/prompt_callbacks/: interactive_manage_callbacks.rs  prompt_input_callbacks.rs  shell_manage_callbacks.rs
src/gui/run/callbacks/prompt_callbacks/interactive_manage_callbacks/: editor_callbacks.rs  save_callbacks.rs
src/gui/run/callbacks/terminal_callbacks/: chips_selection_callbacks.rs  history_callbacks.rs  mod.rs  tab_actions_callbacks.rs  viewport_callbacks.rs
src/terminal/: key_encoding.rs  mod.rs  prompt_key.rs  pty.rs  pty_event.rs  render.rs  replay.rs  session.rs  types.rs  windows_conpty.rs
src/terminal_v2/: mod.rs  model.rs  renderer.rs  session.rs
translations/en/LC_MESSAGES/: CliGJ.po
translations/zh_TW/LC_MESSAGES/: CliGJ.po
ui/: app.slint  key_labels.slint  term_types.slint  theme.slint
ui/components/: gj_about_dialog.slint  gj_at_file_picker.slint  gj_chrome_button.slint  gj_dialog_toolbar_button.slint  gj_file_drop_overlay.slint  gj_interactive_manage_dialog.slint  gj_prompt_drop_zone.slint  gj_prompt_image_lightbox.slint  gj_rename_tab_dialog.slint  gj_shell_manage_panel.slint  gj_terminal_tab.slint  gj_terminal_tab_bar.slint  gj_update_dialog.slint  gj_viewer.slint  gj_window_chrome.slint  gj_window_resize_edge_cursors.slint  gj_workspace.slint
ui/fonts/: README.md
ui/pages/: gj_about_dialog.slint  gj_interactive_manage_dialog.slint  gj_shell_manage_panel.slint  gj_update_dialog.slint
vscode-extension/: .vscodeignore  LICENSE  README.md  package-lock.json  package.json
vscode-extension/src/: extension.ts
