[package]
name = "CliGJ"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
slint = "1.15.1"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "process"] }
toml = "1.1.2"

[build-dependencies]
slint-build = "1.15.1"
