[package]
name = "CliGJ"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
rfd = "0.15.0"
dirs = "6.0.0"
encoding_rs = "0.8.35"
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15.1", features = ["unstable-winit-030"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "process"] }
toml = "1.1.2"
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "05343b38" }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }

[build-dependencies]
slint-build = "1.15.1"
