[package]
name = "CliGJ"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
rfd = "0.15.0"
dirs = "6.0.0"
encoding_rs = "0.8.35"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15.1", features = ["unstable-winit-030", "gettext", "unstable-fontique-07"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "process"] }
toml = "1.1.2"
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "05343b38" }
unicode-width = "0.2.2"
interprocess = "2.4.2"
serde_json = "1.0.149"
sys-locale = "0.3.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
tray-icon = "0.22.0"

windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.15.1"
ico = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[profile.fastdev]
inherits = "dev"
opt-level = 1
debug = true
incremental = true
codegen-units = 128

[profile.fastdev.package."CliGJ"]
opt-level = 2
