[package]
name = "CliGJ"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
rfd = "0.15.0"
encoding_rs = "0.8.35"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
slint = { version = "1.15.1", features = ["unstable-winit-030", "gettext", "unstable-fontique-07"] }
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
interprocess = "2.4.2"
serde_json = "1.0.149"
sys-locale = "0.3.2"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
unicode-width = "0.2.2"
clap = { version = "4.6.1", features = ["derive"] }
cligj-core = { path = "../crates/cligj-core" }
cligj-terminal = { path = "../crates/cligj-terminal" }
cligj-workspace = { path = "../crates/cligj-workspace" }

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
tray-icon = "0.22.0"

windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.15.1"
ico = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"
