[package]
name = "cligj-terminal"
version = "0.1.0"
edition = "2024"

[dependencies]
wezterm-term = { git = "https://github.com/wez/wezterm", rev = "05343b38" }
unicode-width = "0.2.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }
windows = { version = "0.62.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Console",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
